@@ -1,4 +1,6 @@
-* Sun Jul 07 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
+* Mon Jul 29 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 3.0.0-0
+- Make the 'timestamp' in the client-side report optional to prevent puppet
+  from triggering file resource changes every time
 - Remove the experimental v1 data since it is no longer used
 - Remove partial v2 data sets
 - Add v2 data for the non-SIMP `yum` module
